<resources>
    <string name="app_name">taller_material_desing</string>

    <string name="guardar">Guardar</string>
    <string name="limpiar">Limpiar</string>
    <string name="crear_establecimiento">Crear establecimiento</string>
    <string name="NIT">NIT</string>
    <string name="razon_social">Razón social</string>
    <string name="direccion">Dirección</string>

    <string name="error_numero">El campo es requerido</string>
    <string name="guardado_exitoso">Establecimiento guardada exitosamente</string>

    <string name="select_foto">Seleccione la foto del establecimeinto</string>

    <string name="titulo_eliminar">Eliminar Establecimeinto</string>
    <string name="msg_eliminar">¿Está seguro de eliminar este establecimeinto?</string>
    <string name="msg_si">Si</string>
    <string name="msg_no" translatable="false">No</string>

</resources>
